--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="désolé votre message n'a pas pu être envoyé, réessayez plus tard.">
+				<form id="form_1" >
 					<div class="form-group">
 						<label for="name">
 							Nom
