--- a/index.html
+++ b/index.html
@@ -230,22 +230,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://twitter.fr"><span class="fa fa-twitter icon-md"></span>.</a>
+							<a class="social" href="http://twitter.fr"><span class="fa fa-twitter icon-md"> - twitter</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"></span>.</a>
+							<a class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"> - facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://dribbble.com"><span class="fa fa-dribbble icon-md"></span>.</a>
+							<a class="social" href="http://dribbble.com"><span class="fa fa-dribbble icon-md"> - dribbble</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://instagram.com"><span class="fa fa-instagram icon-md"></span>.</a>
+							<a class="social" href="http://instagram.com"><span class="fa fa-instagram icon-md"> - instagram</span></a>
 						</div>
 					</div>
 				</div>
