modifications couleur texte

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
     <meta name="keywords" content="seo, web design, creation site web, site internet, agence design lyon, responsive web design, front end developer, web design agency">
-    <meta name="description" content="agence de web design à Lyon qui aides les entreprises a devenir attractives et visibles sur internet">
+    <meta name="description" content="agence de web design à Lyon qui aide les entreprises a devenir attractives et visibles sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<link rel="shortcut icon" type="image/png" href="favicon.png">
 	<link rel="canonical" href="https://sachaveyre.github.io/-SachaVeyre_4_201021/" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="canonical" href="https://sachaveyre.github.io/-SachaVeyre_4_201021/" /> 
@@ -119,31 +120,32 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center black">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://twitter.com"><span class="fa fa-twitter icon-md"></span>.</a>
+							<a class="social" href="http://twitter.fr"><span class="fa fa-twitter icon-md"> - twitter</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"></span>.</a>
+							<a class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"> - facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://dribbble.com"><span class="fa fa-dribbble icon-md"></span>.</a>
+							<a class="social" href="http://dribbble.com"><span class="fa fa-dribbble icon-md"> - dribbble</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://instagram.com"><span class="fa fa-instagram icon-md"></span>.</a>
+							<a class="social" href="http://instagram.com"><span class="fa fa-instagram icon-md"> - instagram</span></a>
 						</div>
 					</div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
